# AMGX_Solver

./: .gitignore  CMakeLists.txt  CMakeSettings.json
AMGX_Solver/: AMGX_Solver.cpp  CMakeLists.txt  mpi_test.cpp  mpi_test.h  simple_test.cpp
CMake/: FindMPILibraries.cmake
scripts/: build.cmd  config.cmd  run.cmd  run_mpi.cmd
src/: AMGX_helper.cpp  AMGX_helper.h  AMGX_main.cpp
